force-app/main/default/objects/nepa_decision_log__c/fields/nepa_data_annotation__c.field-meta.xml
<CustomField>
<fullName>nepa_data_annotation__c</fullName>
        <description>Human-readable annotation describing the evaluation data — its source, quality, or any known gaps. Maps to CEQ standard process_decision_payload.data_annotation.</description>
        <inlineHelpText>Annotation on the evaluation input data (source, quality, known gaps).</inlineHelpText>
        <label>Data Annotation</label>
        <length>32768</length>
        <type>LongTextArea</type>
</CustomField>