force-app/main/default/objects/nepa_decision_log__c/fields/nepa_data_record_version__c.field-meta.xml
<CustomField>
<fullName>nepa_data_record_version__c</fullName>
        <description>Version identifier for this decision log record. Required provenance field per CEQ Data and Technology Standard v1.2.</description>
        <inlineHelpText>Record version for provenance tracking.</inlineHelpText>
        <label>Data Record Version</label>
        <length>50</length>
        <type>Text</type>
</CustomField>