force-app/main/default/objects/nepa_decision_log__c/fields/nepa_data_source_agency__c.field-meta.xml
<CustomField>
<fullName>nepa_data_source_agency__c</fullName>
        <description>The federal agency that originated this decision log record. Required provenance field per CEQ Data and Technology Standard v1.2.</description>
        <inlineHelpText>Agency that originated this record (e.g., BLM, USFS, USACE).</inlineHelpText>
        <label>Data Source Agency</label>
        <length>255</length>
        <type>Text</type>
</CustomField>