force-app/main/default/objects/nepa_decision_log__c/fields/nepa_data_source_system__c.field-meta.xml
<CustomField>
<fullName>nepa_data_source_system__c</fullName>
        <description>The source system from which this record was ingested or originated. Required provenance field per CEQ Data and Technology Standard v1.2.</description>
        <inlineHelpText>Originating system (e.g., BRE, CE Screener, manual entry).</inlineHelpText>
        <label>Data Source System</label>
        <length>255</length>
        <type>Text</type>
</CustomField>