force-app/main/default/objects/nepa_decision_log__c/fields/nepa_decision_element__c.field-meta.xml
<CustomField>
<fullName>nepa_decision_element__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The decision element criterion evaluated in this log entry. Maps to CEQ standard process_decision_payload.process_decision_element.</description>
        <inlineHelpText>The specific criterion from the decision element catalog that was evaluated.</inlineHelpText>
        <label>Decision Element</label>
        <referenceTo>nepa_decision_element__c</referenceTo>
        <relationshipLabel>Decision Logs</relationshipLabel>
        <relationshipName>Decision_Logs</relationshipName>
        <type>Lookup</type>
</CustomField>