force-app/main/default/objects/nepa_decision_log__c/fields/nepa_evaluation_data__c.field-meta.xml
<CustomField>
<fullName>nepa_evaluation_data__c</fullName>
        <description>JSON object containing the input data used to evaluate this criterion (e.g., {"acreage": 4.2, "action_type": "OilGas_Drilling", "agency": "BLM"}). Maps to CEQ standard process_decision_payload.evaluation_data.</description>
        <inlineHelpText>JSON input data used to evaluate this criterion.</inlineHelpText>
        <label>Evaluation Data (JSON)</label>
        <length>32768</length>
        <type>LongTextArea</type>
</CustomField>