force-app/main/default/objects/nepa_decision_log__c/fields/nepa_evaluation_data_annotation__c.field-meta.xml
<CustomField>
<fullName>nepa_evaluation_data_annotation__c</fullName>
        <description>Structured JSON annotation on the evaluation data, for machine-readable quality and provenance metadata. Maps to CEQ standard process_decision_payload.evaluation_data_annotation.</description>
        <inlineHelpText>Structured JSON annotation on the evaluation data for machine-readable metadata.</inlineHelpText>
        <label>Evaluation Data Annotation (JSON)</label>
        <length>32768</length>
        <type>LongTextArea</type>
</CustomField>