force-app/main/default/objects/nepa_decision_log__c/fields/nepa_parent_log__c.field-meta.xml
<CustomField>
<fullName>nepa_parent_log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent log entry for hierarchical evaluation chains (e.g., a sub-criterion log nested under a composite criterion log). Maps to CEQ standard process_decision_payload.parent_payload.</description>
        <inlineHelpText>Parent log entry for nested evaluation chains.</inlineHelpText>
        <label>Parent Log</label>
        <referenceTo>nepa_decision_log__c</referenceTo>
        <relationshipLabel>Child Logs</relationshipLabel>
        <relationshipName>Child_Decision_Logs</relationshipName>
        <type>Lookup</type>
</CustomField>