force-app/main/default/objects/nepa_decision_log__c/fields/nepa_process__c.field-meta.xml
<CustomField>
<fullName>nepa_process__c</fullName>
        <description>The NEPA process (IndividualApplication) this evaluation log belongs to. MasterDetail — deleting the process cascades deletion of all child logs. Maps to CEQ standard process_decision_payload.process.</description>
        <inlineHelpText>The NEPA review process this evaluation log documents.</inlineHelpText>
        <label>NEPA Process</label>
        <referenceTo>IndividualApplication</referenceTo>
        <relationshipLabel>Decision Logs</relationshipLabel>
        <relationshipName>Decision_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
</CustomField>