force-app/main/default/objects/nepa_decision_log__c/fields/nepa_project__c.field-meta.xml
<CustomField>
<fullName>nepa_project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The project (Program) associated with this evaluation. Denormalized from the process for direct project-level querying. Maps to CEQ standard process_decision_payload.project.</description>
        <inlineHelpText>Project associated with this evaluation log.</inlineHelpText>
        <label>Project</label>
        <referenceTo>Program</referenceTo>
        <relationshipLabel>Decision Logs</relationshipLabel>
        <relationshipName>Decision_Logs_Project</relationshipName>
        <type>Lookup</type>
</CustomField>