force-app/main/default/objects/nepa_decision_log__c/fields/nepa_record_owner_agency__c.field-meta.xml
<CustomField>
<fullName>nepa_record_owner_agency__c</fullName>
        <description>The federal agency responsible for maintaining this record. Required provenance field per CEQ Data and Technology Standard v1.2.</description>
        <inlineHelpText>Agency responsible for this record's ongoing accuracy.</inlineHelpText>
        <label>Record Owner Agency</label>
        <length>255</length>
        <type>Text</type>
</CustomField>