force-app/main/default/objects/nepa_decision_log__c/fields/nepa_response__c.field-meta.xml
<CustomField>
<fullName>nepa_response__c</fullName>
        <description>Narrative response to the decision element for this process — the applicant's or reviewer's answer to the screening question. Maps to CEQ standard process_decision_payload.response.</description>
        <inlineHelpText>Narrative response to the screening criterion.</inlineHelpText>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
</CustomField>