force-app/main/default/objects/nepa_decision_log__c/fields/nepa_result__c.field-meta.xml
<CustomField>
<fullName>nepa_result__c</fullName>
        <description>Text outcome of the evaluation (e.g., "CE Qualifies", "Extraordinary Circumstances Triggered", "Insufficient Data"). Maps to CEQ standard process_decision_payload.result.</description>
        <inlineHelpText>Text outcome of this evaluation (e.g., "CE Qualifies", "Escalate to EA").</inlineHelpText>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
</CustomField>