force-app/main/default/objects/nepa_decision_log__c/fields/nepa_result_bool__c.field-meta.xml
<CustomField>
<fullName>nepa_result_bool__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean pass/fail result of this criterion evaluation. True = criterion satisfied (e.g., CE qualifies); False = criterion not satisfied (e.g., acreage exceeds limit, requires EA). Maps to CEQ standard process_decision_payload.result_bool.</description>
        <inlineHelpText>True if this criterion was satisfied; False if not.</inlineHelpText>
        <label>Result (Pass/Fail)</label>
        <type>Checkbox</type>
</CustomField>