force-app/main/default/objects/nepa_decision_log__c/fields/nepa_result_data__c.field-meta.xml
<CustomField>
<fullName>nepa_result_data__c</fullName>
        <description>JSON object containing structured result data beyond the text result (e.g., matched CE code, risk score breakdown, spatial intersection results). Maps to CEQ standard process_decision_payload.result_data.</description>
        <inlineHelpText>Structured result data as JSON (e.g., matched CE code, computed scores).</inlineHelpText>
        <label>Result Data (JSON)</label>
        <length>32768</length>
        <type>LongTextArea</type>
</CustomField>