force-app/main/default/objects/nepa_decision_log__c/fields/nepa_result_notes__c.field-meta.xml
<CustomField>
<fullName>nepa_result_notes__c</fullName>
        <description>Supplemental notes explaining the result, including edge cases, borderline determinations, or manual override rationale. Maps to CEQ standard process_decision_payload.result_notes.</description>
        <inlineHelpText>Notes explaining the result, especially for borderline or manually overridden evaluations.</inlineHelpText>
        <label>Result Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
</CustomField>