force-app/main/default/objects/nepa_decision_log__c/fields/nepa_result_source__c.field-meta.xml
<CustomField>
<fullName>nepa_result_source__c</fullName>
        <description>Source of the evaluation result: BRE (Business Rules Engine), Manual, AI (model-generated), or External (third-party system). Maps to CEQ standard process_decision_payload.result_source.</description>
        <inlineHelpText>How this result was produced: BRE, Manual, AI, or External.</inlineHelpText>
        <label>Result Source</label>
        <length>255</length>
        <type>Text</type>
</CustomField>